syntax="proto3";

package auth;

option go_package = ".;auth";

message ClientCredentials {
    string email = 1;
    string password = 2;
}

message Token {
    string accessToken = 1;
    string refreshToken = 2;
    string tokenType = 3;
    int64 expiresIn = 4;
}

message GenerateTokenRequest {
    ClientCredentials credentials = 1;
}

message GenerateTokenResponse {
    Token token = 1;
}

message RetrieveTokenInformationRequest {
    string accessToken = 1;
}

message RetrieveTokenInformationResponse {
    string email = 1;
    int64 expiresAt = 2;
    int64 issuedAt = 3;
}

service CompanyServices {
    rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse) {}
    rpc RetrieveTokenInformation(RetrieveTokenInformationRequest) returns (RetrieveTokenInformationResponse) {}
}
